# UniversityCourses

./: .gitignore  README.md
 DigitImageProcess/ColorMapping/: CMakeLists.txt  README.md  main.cpp
 DigitImageProcess/MedicalImageInhance/: CMakeLists.txt  main.cpp
ComputerGraphics/: CMakeLists.txt  LICENSE  README.md
ComputerGraphics/实验一/: CMakeLists.txt  homework.cpp  test.cpp  实验一.md
ComputerGraphics/实验三/: CMakeLists.txt  cgCube.cpp  cgCube.h  cgCylinder.cpp  cgCylinder.h  cgPoint3D.cpp  cgPoint3D.h  cgSphere.cpp  cgSphere.h  cgTriangle.cpp  cgTriangle.h  main.cpp  实验三.md
ComputerGraphics/实验二/: CMakeLists.txt  main.cpp  实验二.md
ComputerGraphics/实验四/: CMakeLists.txt  cgCube.cpp  cgCube.h  cgCylinder.cpp  cgCylinder.h  cgPoint3D.cpp  cgPoint3D.h  cgSphere.cpp  cgSphere.h  main.cpp  实验四.md
MachineLearning/: AdaBoost.py  Adaboost.py  BinaryClassification.py  README.md  classifier.py  main.py
MachineLearning/Adaboost/: BinaryClassification.py  adaboost.py  classifier.py
MachineLearning/Adaboost/31/: adaboost.labels  adaboost.model
MachineLearning/Adaboost/DoubleDivided/: 1.model
MachineLearning/Adaboost/model/: adaboost.labels  adaboost.model
MachineLearning/textCNN/: Model.pkl  main.ipynb  textCNN文本二分类.md  实际训练.ipynb  模型异常预测测试.ipynb  评估算法.ipynb
MachineLearning/textCNN/Data/: negative.npy  positive.npy
MachineLearning/textCNN/MyModule/: DataFormat.py  Net.py  __init__.py
MobileApplicationDevelopment/Class1-ShowLayout/: settings.gradle
MobileApplicationDevelopment/Class1-ShowLayout/app/: build.gradle
MobileApplicationDevelopment/Class1-ShowLayout/app/src/main/: AndroidManifest.xml
MobileApplicationDevelopment/Class1-ShowLayout/app/src/main/java/com/example/showlayout/: FirstFragment.java  MainActivity.java
MobileApplicationDevelopment/Class1-ShowLayout/app/src/main/res/layout/: activity_main.xml  fragment_first.xml
MobileApplicationDevelopment/Class1-ShowLayout/app/src/main/res/navigation/: nav_graph.xml
MobileApplicationDevelopment/Class1-ShowLayout/app/src/main/res/values/: strings.xml  themes.xml
MobileApplicationDevelopment/Class1-ShowLayout/gradle/wrapper/: gradle-wrapper.properties
MobileApplicationDevelopment/Class2-MultiLayout/app/: build.gradle
MobileApplicationDevelopment/Class2-MultiLayout/app/src/main/java/com/example/myapplication/: MainActivity.java  SecondActivity.java
MobileApplicationDevelopment/Class2-MultiLayout/app/src/main/res/layout/: activity_main.xml  activity_second.xml
MobileApplicationDevelopment/Class2-MultiLayout/gradle/wrapper/: gradle-wrapper.properties
MobileApplicationDevelopment/Class3-Fragment/app/: build.gradle
MobileApplicationDevelopment/Class3-Fragment/app/src/main/: AndroidManifest.xml
MobileApplicationDevelopment/Class3-Fragment/app/src/main/java/com/example/myapplication/: MainActivity.java
MobileApplicationDevelopment/Class3-Fragment/app/src/main/res/layout/: activity_main.xml  fragment_blank.xml
MobileApplicationDevelopment/Class3-Fragment/gradle/wrapper/: gradle-wrapper.properties
MobileApplicationDevelopment/Class4-Message/app/src/main/: AndroidManifest.xml
MobileApplicationDevelopment/Class4-Message/app/src/main/java/com/example/myapplication/: MainActivity.java
MobileApplicationDevelopment/Class4-Message/app/src/main/res/layout/: activity_main.xml
MobileApplicationDevelopment/Class4-Message/gradle/wrapper/: gradle-wrapper.properties
MobileApplicationDevelopment/Class5-InternetConnection/app/src/main/: AndroidManifest.xml
MobileApplicationDevelopment/Class5-InternetConnection/app/src/main/java/com/example/myapplication/: MainActivity.java  MyTools.java
MobileApplicationDevelopment/Class5-InternetConnection/app/src/main/res/layout/: activity_main.xml
MobileApplicationDevelopment/Class5-InternetConnection/gradle/wrapper/: gradle-wrapper.properties
MobileApplicationDevelopment/Class6-MultiSensor/app/src/main/: AndroidManifest.xml
MobileApplicationDevelopment/Class6-MultiSensor/app/src/main/java/com/example/myapplication/: MainActivity.java
MobileApplicationDevelopment/Class6-MultiSensor/app/src/main/res/layout/: activity_main.xml
MobileApplicationDevelopment/Class6-MultiSensor/gradle/wrapper/: gradle-wrapper.properties
