#========================================
# cmake最低版本要求
#========================================
cmake_minimum_required(VERSION 3.15)
#========================================
# 项目名称+基本变量设置
#========================================
project(Computer-Graphics)
set(CMAKE_CXX_STANDARD 17)

add_subdirectory("实验一")
add_subdirectory("实验二")
add_subdirectory("实验三")
add_subdirectory("实验四")